--- a/HTML_ASS_2/table.html
+++ b/HTML_ASS_2/table.html
@@ -30,6 +30,7 @@
             </tr> 
          </tbody>
     </table>
+    <button><a href="media.html">Go to media.html page</a></button>
   </main>  
 </body>
 </html>
