updated the link position

--- a/HTML_ASS_2/table.html
+++ b/HTML_ASS_2/table.html
@@ -6,6 +6,9 @@
     <title>HTML Table</title>
 </head>
 <body>
+    <header>
+        <button><a href="media.html">Go to media.html page</a></button>
+    </header>
   <main>
     <table border="1">
          <thead>
@@ -30,7 +33,7 @@
             </tr> 
          </tbody>
     </table>
-    <button><a href="media.html">Go to media.html page</a></button>
+    
   </main>  
 </body>
 </html>
